# pwr-airly

./: Cargo.toml  README.md
examples/: getting-measurements-for-installation.rs  getting-measurements-for-point.rs  getting-nearest-installations.rs  getting-specific-installations.rs  installations.rs  querying-for-installations.rs  querying-for-measurements.rs
src/: client.rs  error.rs  internal.rs  lib.rs  macros.rs  models.rs
src/client/: client.rs  error.rs  mod.rs  models.rs  parse_response.rs  request_builder.rs  response.rs  response_parser.rs  result.rs
src/client/models/: mod.rs  rate_limit.rs
src/installations/: client.rs  mod.rs  models.rs
src/measurements/: client.rs  mod.rs  models.rs
src/models/: error.rs  measurements.rs  mod.rs  sensor.rs
src/utils/: client.rs  error.rs  mod.rs  response.rs  response_parser.rs  result.rs
src/utils/models/: error_context.rs  rate_limit.rs
